--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,157 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+  body {
+    @apply text-darkText;   /* ← любой класс Tailwind */
+    /* или хардкод: color:#1d4ed8; */
+  }
+  a {
+    @apply text-darkText;   /* ← любой класс Tailwind */
+
+  }
+
+  /* Light 300 */
+  @font-face {
+    font-family: "IBMPlex Sans";
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url('@/assets/fonts/IBM/IBMPlexSans-Light.eot');
+    src:
+      url('@/assets/fonts/IBM/IBMPlexSans-Light.eot?#iefix') format('embedded-opentype'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Light.woff2')      format('woff2'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Light.woff')       format('woff'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Light.ttf')        format('truetype');
+  }
+
+  /* Regular 400 */
+  @font-face {
+    font-family: "IBMPlex Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('@/assets/fonts/IBM/IBMPlexSans.eot');
+    src:
+      url('@/assets/fonts/IBM/IBMPlexSans.eot?#iefix') format('embedded-opentype'),
+      url('@/assets/fonts/IBM/IBMPlexSans.woff2')      format('woff2'),
+      url('@/assets/fonts/IBM/IBMPlexSans.woff')       format('woff'),
+      url('@/assets/fonts/IBM/IBMPlexSans.ttf')        format('truetype');
+  }
+
+  /* Medium 500 */
+  @font-face {
+    font-family: "IBMPlex Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url('@/assets/fonts/IBM/IBMPlexSans-Medium.eot');
+    src:
+      url('@/assets/fonts/IBM/IBMPlexSans-Medium.eot?#iefix') format('embedded-opentype'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Medium.woff2')      format('woff2'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Medium.woff')       format('woff'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Medium.ttf')        format('truetype');
+  }
+
+  /* SemiBold 600 */
+  @font-face {
+    font-family: "IBMPlex Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url('@/assets/fonts/IBM/IBMPlexSans-SemiBold.eot');
+    src:
+      url('@/assets/fonts/IBM/IBMPlexSans-SemiBold.eot?#iefix') format('embedded-opentype'),
+      url('@/assets/fonts/IBM/IBMPlexSans-SemiBold.woff2')      format('woff2'),
+      url('@/assets/fonts/IBM/IBMPlexSans-SemiBold.woff')       format('woff'),
+      url('@/assets/fonts/IBM/IBMPlexSans-SemiBold.ttf')        format('truetype');
+  }
+
+  /* Bold 700 */
+  @font-face {
+    font-family: "IBMPlex Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('@/assets/fonts/IBM/IBMPlexSans-Bold.eot');
+    src:
+      url('@/assets/fonts/IBM/IBMPlexSans-Bold.eot?#iefix') format('embedded-opentype'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Bold.woff2')      format('woff2'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Bold.woff')       format('woff'),
+      url('@/assets/fonts/IBM/IBMPlexSans-Bold.ttf')        format('truetype');
+  }
+
+  
+/* Light 300 ------------------------------------------------------------- */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+
+  /* «двойная» eot-строка – фикс для IE8 */
+  src: url('@/assets/fonts/Montserrat-Light.eot'); /* IE9- */ 
+  src:
+       url('@/assets/fonts/Montserrat-Light.eot?#iefix') format('embedded-opentype'), /* IE6-8 */
+       url('@/assets/fonts/Montserrat-Light.woff2')      format('woff2'),  /* modern */
+       url('@/assets/fonts/Montserrat-Light.woff')       format('woff'),   /* fallback */
+       url('@/assets/fonts/Montserrat-Light.ttf')        format('truetype');
+}
+
+/* Regular 400 ----------------------------------------------------------- */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('@/assets/fonts/Montserrat-Regular.eot');
+  src:
+       url('@/assets/fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+       url('@/assets/fonts/Montserrat-Regular.woff2')      format('woff2'),
+       url('@/assets/fonts/Montserrat-Regular.woff')       format('woff'),
+       url('@/assets/fonts/Montserrat-Regular.ttf')        format('truetype');
+}
+
+/* Medium 500 ----------------------------------------------------------- */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('@/assets/fonts/Montserrat-Medium.eot');
+  src:
+       url('@/assets/fonts/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
+       url('@/assets/fonts/Montserrat-Medium.woff2')      format('woff2'),
+       url('@/assets/fonts/Montserrat-Medium.woff')       format('woff'),
+       url('@/assets/fonts/Montserrat-Medium.ttf')        format('truetype');
+}
+
+/* SemiBold 600 ---------------------------------------------------------- */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('@/assets/fonts/Montserrat-SemiBold.eot');
+  src:
+       url('@/assets/fonts/Montserrat-SemiBold.eot?#iefix') format('embedded-opentype'),
+       url('@/assets/fonts/Montserrat-SemiBold.woff2')      format('woff2'),
+       url('@/assets/fonts/Montserrat-SemiBold.woff')       format('woff'),
+       url('@/assets/fonts/Montserrat-SemiBold.ttf')        format('truetype');
+}
+
+/* Bold 700 -------------------------------------------------------------- */
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('@/assets/fonts/Montserrat-Bold.eot');
+  src:
+       url('@/assets/fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+       url('@/assets/fonts/Montserrat-Bold.woff2')      format('woff2'),
+       url('@/assets/fonts/Montserrat-Bold.woff')       format('woff'),
+       url('@/assets/fonts/Montserrat-Bold.ttf')        format('truetype');
+}
+}
+
